--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,7 @@ jobs:
       fail-fast: true
       matrix:
         include:
+          - php: '8.1'
           - php: '8.2'
     steps:
       - name: Checkout
